# event_project

./: .gitignore  ApiClient.js  App.js  app.json  babel.config.js  dependencies.txt  package-lock.json  package.json
assets/Countries/: countries.json
backend/: app.db  config.py  pyproject.toml
backend/api/: __init__.py  app.py  auth.py
backend/api/blueprints/: __init__.py  decorators.py  events.py  fake.py  tokens.py  users.py
backend/api/models/: __init__.py  event.py  relationship.py  token.py  user.py
backend/api/models/utils/: __init__.py
backend/api/models/utils/pagination/: cursor_paginator.py
backend/api/schemas/: __init__.py  event_schema.py  token_schema.py  user_schema.py
backend/api/schemas/pagination/: __init__.py  cursor_paginator_schema.py  page_schema.py
backend/migrations/versions/: 7b2d7842773b_.py
components/: BottomTabNavigator.js
contexts/: ApiProvider.js  ThemeProvider.js
features/event/: EventGrid.js  EventGridElement.js
features/user/: Avatar.js  UserGrid.js
pages/: CreateEventScreen.js  ExploreScreen.js  HomeScreen.js  MyProfileScreen.js  SearchScreen.js  index.js
src/: ApiClient.js  App.js  GlobalStyle.js  app.navigator.js  app.permissions.js
src/components/CustomButton/: CustomButton.js  index.js
src/components/Custominput/: Custominput.js  index.js
src/components/Header/: Header.styles.js  (+1 more)
src/contexts/: ApiProvider.js
src/hooks/: useFetchEvents.js
src/main/: AndroidManifest.xml
src/pages/: Events.js  Explore.js  Feed.js  Login.js
styling/: Colors.js  Grid.js  Icons.js  Typography.js  utils.js
(+5 files in other folders)
