[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Onzeka <email_id>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Faker = "^13.15.0"
Pillow = "^9.2.0"
marshmallow = "^3.17.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.0"
Flask-HTTPAuth = "^4.7.0"
webargs = "^8.2.0"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
